# academic-sludge-line

./: .gitignore  DEPLOY.md  HANDOFF.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
asl/: __init__.py  catalog.py  cli.py  doc_render.py  html_render.py  llm.py  local_providers.py  pipeline.py  reference_search.py  smart_loader.py  templates.py  ui.py  web_research.py  workspace.py
asl/_vendor/smart-loader/: .gitignore
docs/: ethics.md
examples/: topic_brief.md
scripts/: deploy_local.sh
tests/: test_pipeline.py
