[metadata]
name = academic-sludge-line
version = 0.1.0
description = A satirical but serious framework for transparent iterative academic drafting.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Matt Sureham

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    asl = asl.cli:main

